# Dphen-

./: .env.example  .gitignore  AGENTS.md  DPhen_feats_modulaires_declasses.docx  README.md  SRD_DPhen_v1_0.docx  pyproject.toml
.obsidian/: community-plugins.json
.obsidian/plugins/holodeck-control/: README.md  core.js  main.js  manifest.json  styles.css
docs/holodeck/: Constitution.md  Journal.md  Runtime.md  Souvenirs.md  Workflow.md
docs/holodeck/contexts/: DPhen.md  TEMPLATE_Context.md
docs/holodeck/meta/: Accueil_Operateur.md  Assistant_Operator_Notes.md  Carte_Holodeck.canvas  End_of_Session_Requirements.md  Guide_Obsidian.md  Resident_Interior_Perspective_Protocol.md  Schema_Proprietes_Obsidian.md
docs/holodeck/meta/bases/: Residents.base  (+2 more)
docs/holodeck/pending_updates/: Holodeck_Update_002_test_pipeline.md  Holodeck_Update_003_import_retrospective_feuille_personnage.md  TEMPLATE_Holodeck_Update.md
docs/holodeck/residents/: Adrian.md  Camille.md  Eleanor.md  TEMPLATE_Resident.md  Viktor.md
docs/holodeck/sessions/: 001_initialisation_holodeck.md  002_test_pipeline.md  003_retrospective_feuille_personnage.md  004_import_premiere_seance_feuille_personnage.md  005_declassement_feats_techniques_modulaires.md  INDEX.md  TEMPLATE_Session.md
holodeck_engine/: __init__.py  cli.py  config.py  context.py  engine.py  models.py  openai_client.py  prompts.py  telemetry.py
rules/: DPhen_Compilation_factions_ordres.docx  Lore_DPhen_v0_04.docx  SRD_DPhen_v1_0.docx  SRD_DPhen_v1_01.docx  SRD_DPhen_v1_02_DRAFT.docx
tests/: holodeck_control.test.cjs  test_engine.py
(+104 files in other folders)
