[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "holodeck-resident-engine"
version = "0.1.0"
description = "Moteur local de reactions et de continuite pour les residents du Holodeck"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.47,<3",
]

[project.scripts]
holodeck = "holodeck_engine.cli:main"

[tool.setuptools.packages.find]
include = ["holodeck_engine*"]
